--- a/sass/modules/_box.scss
+++ b/sass/modules/_box.scss
@@ -10,17 +10,17 @@
     .box2,
     .box3 {
         display: grid;
-        grid-template-columns: repeat(10, 1rem);
-        grid-template-rows: minmax(1rem, auto);
+        grid-template-columns: repeat(10,0.9rem);
+        grid-template-rows: minmax(0.9rem, auto);
         grid-auto-flow: row;
-        gap: 1.185rem; //original 1.375rem
+        gap: 1.285rem; //original 1.375rem
     }
 
     .box1 div,
     .box2 div,
     .box3 div {
-        width: 1rem;
-        height: 1rem;
+        width: 0.9rem;
+        height: 0.9rem;
         background: #fff;
     }
 
@@ -40,9 +40,9 @@
         .box1,
         .box2,
         .box3 {
-            grid-template-columns: repeat(11, 1.25rem);
-            grid-template-rows: minmax(1.25rem, auto);
-            gap: 3rem; //custom value that balanced these boxes
+            grid-template-columns: repeat(11, 1rem);
+            grid-template-rows: minmax(1rem, auto);
+            gap: 2.9rem; //custom value that balanced these boxes
             // separator margin
             margin-right: -1.2rem;
         }
@@ -50,8 +50,8 @@
         .box1 div,
         .box2 div,
         .box3 div {
-            width: 1.25rem;
-            height: 1.25rem;
+            width: 1rem;
+            height: 1rem;
             background: #fff;
         }
 
